[project]
name = "plr"
version = "0.1.0"
description = "Python LeetCode runner to fetch problems and test solutions."
authors = [{name = "Ashley James", email = "ashley@dashmage.dev"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
keywords = ["python", "leetcode"]
dependencies = [
    "typer-slim==0.21.0",
    "rich>=14.0.0,<15.0.0",
    "gql[requests]>=3.5.0,<4.0.0",
    "pydantic>=2.12.1,<3.0.0",
    "beautifulsoup4>=4.12.3,<5.0.0",
]

[project.urls]
repository = "https://github.com/dashmage/plr"

[project.scripts]
plr = "plr.cli:plr"

[project.optional-dependencies]
test = ["pytest>=8.2.1,<9.0.0"]
dev = ["black>=24.4.2,<25.0.0", "isort>=5.13.2,<6.0.0"]

[tool.black]
quiet = true

[tool.isort]
profile = "black"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
