[project]
name = "plr"
version = "0.1.0"
description = "Python LeetCode runner to fetch problems and test solutions."
authors = [{name = "Ashley James", email = "ashley@dashmage.dev"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["python", "leetcode"]
dependencies = [
    "typer-slim>=0.24.0,<1.0.0",
    "rich>=14.3.3,<15.0.0",
    "gql[requests]>=4.0.0,<5.0.0",
    "pydantic>=2.12.5,<3.0.0",
    "beautifulsoup4>=4.14.3,<5.0.0",
]

[project.urls]
repository = "https://github.com/dashmage/plr"

[project.scripts]
plr = "plr.cli:plr"

[project.optional-dependencies]
test = ["pytest>=9.0.2,<10.0.0"]
dev = ["ty>=0.0.28,<1.0.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
